# woodgas

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/tilegame/: CMakeLists.txt
examples/tilegame/res/: player.xcf  test.json
examples/tilegame/res/tiles/: dirt.xcf  grass.xcf  gravel.xcf  leaves.xcf  log.xcf  planks.xcf  redstone.xcf  sand.xcf  stone.xcf
examples/tilegame/src/: camera.cc  camera.h  components.cc  components.h  main.cc  tilemap.cc  tilemap.h
src/: bundler.cc  woodgas_test.cc
src/asset/: asset.cc  asset.h  serialize.cc
src/aux/: aux.h
src/core/: core.cc  core.h
src/glad/: glad.c  glad.h
src/input/: input.cc  input.h
src/render/: render.cc  render.h  shaders.h
src/script/: python.cc  python.h
src/script/py_modules/: logger.cc  render.cc
src/tests/: assets.cc  core.cc  full.cc  logging.cc  python.cc  render.cc  time.cc
src/util/: logging.cc  logging.h  math.cc  math.h  time.cc  time.h  timer.cc  timer.h
test/debug/: assets.cc  core.cc  full.cc  logging.cc  python.cc  render.cc  time.cc
test_resources/: generic.json  script.py  script2.py
test_resources/jsons/: testing.json
